@@ -1,3 +1,6 @@
+######## 2014-8-23 ##########
+alter table shop_weixin_response add column fuzzy_match tinyint(1) NOT NULL;
+update shop_weixin_response set fuzzy_match=1;
 ######## 2014-8-7 ##########
 alter table shop_weixin_user add column vmobile varchar(24) NOT NULL;
 ######### 2014-8-1 ##########
